# DLLHijacking-Patcher

./: CMakeLists.txt  LICENSE  README.md  README_zh.md  build.bat
include/: TitanEngine.h
src/: database.cpp  database.h  debugger.cpp  debugger.h  main.cpp  pe_parser.cpp  pe_parser.h  space_calc.cpp  space_calc.h  tracer.cpp  tracer.h  validator.cpp  validator.h
